--- a/Inventory-service/src/main/resources/application.properties
+++ b/Inventory-service/src/main/resources/application.properties
@@ -1,3 +1,8 @@
 server.port:8082
 spring.application.name=INVENTORY-SERVICE
 
+eureka.instance.preferIpAddress=true
+eureka.instance.hostname=eureka-0
+eureka.client.registerWithEureka=true
+eureka.client.fetchRegistry=true
+eureka.client.serviceUrl.defaultZone=http://eureka-0.eureka.default.dvc.cluster.local:8761/eureka
