--- a/cloud-config-server/src/main/resources/application.yml
+++ b/cloud-config-server/src/main/resources/application.yml
@@ -10,3 +10,14 @@ spring:
         git:
           uri: https://github.com/jappa22/config-server
           clone-on-start: true
+
+
+eureka:
+  instance:
+    preferIpAddress: true
+    hostname: eureka-0
+  client:
+    registerWithEureka: true
+    fetchRegistry: true
+    serviceUrl:
+      defaultZone: http://eureka-0.eureka.default.dvc.cluster.local:8761/eureka
