--- a/Inventory-service/pom.xml
+++ b/Inventory-service/pom.xml
@@ -106,7 +106,7 @@
 					</execution>
 				</executions>
 				<configuration>
-					<repository>inventory-service</repository>
+					<repository>jappa22/inventory-service</repository>
 					<tag>${project.version}</tag>
 					<useMavenSettingsForAuth>true</useMavenSettingsForAuth>
 				</configuration>
