--- a/catalogue-service/pom.xml
+++ b/catalogue-service/pom.xml
@@ -103,7 +103,7 @@
 					</execution>
 				</executions>
 				<configuration>
-						<repository>catalogue-service</repository>
+						<repository>jappa22/catalogue-service</repository>
 						<tag>${project.version}</tag>
 						<useMavenSettingsForAuth>true</useMavenSettingsForAuth>
 				</configuration>
