--- a/cloud-config-server/pom.xml
+++ b/cloud-config-server/pom.xml
@@ -66,7 +66,7 @@
 					</execution>
 				</executions>
 				<configuration>
-					<repository>cloud-config-service</repository>
+					<repository>jappa22/cloud-config-service</repository>
 					<tag>${project.version}</tag>
 					<useMavenSettingsForAuth>true</useMavenSettingsForAuth>
 				</configuration>
