--- a/cloud-gateway/pom.xml
+++ b/cloud-gateway/pom.xml
@@ -74,7 +74,7 @@
 					</execution>
 				</executions>
 				<configuration>
-					<repository>cloud-gateway-service</repository>
+					<repository>jappa22/cloud-gateway-service</repository>
 					<tag>${project.version}</tag>
 					<useMavenSettingsForAuth>true</useMavenSettingsForAuth>
 				</configuration>
