--- a/catalogue-service/src/main/resources/application.properties
+++ b/catalogue-service/src/main/resources/application.properties
@@ -1,15 +1,19 @@
 server.port=8081
 spring.application.name=CATALOGUE-SERVICE
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3307/testdb
-spring.datasource.username=root
-spring.datasource.password=pass@word1
+#spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/testdb
+#spring.datasource.username=root
+#spring.datasource.password=pass@word1
+spring.datasource.password=${DB_USERNAME}
+spring.datasource.username=${DB_PASSWORD}
+spring.datasource.url=jdbc:mysql://${DB_HOST}/${DB_NAME}?useSSL=false
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
 #spring.jpa.show-sql: true
 logging.level.org.springframework.web: DEBUG
 
-eureka.instance.preferIpAddress=true
-eureka.instance.hostname=eureka-0
-eureka.client.registerWithEureka=true
-eureka.client.fetchRegistry=true
-eureka.client.serviceUrl.defaultZone=http://eureka-0.eureka.default.dvc.cluster.local:8761/eureka
+#eureka.instance.preferIpAddress=true
+#eureka.instance.hostname=eureka-0
+#eureka.client.registerWithEureka=true
+#eureka.client.fetchRegistry=true
+#eureka.client.serviceUrl.defaultZone=http://eureka-0.eureka.default.dvc.cluster.local:8761/eureka
