--- a/product-search-service/pom.xml
+++ b/product-search-service/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 	<groupId>com.azure.assignment.inventory</groupId>
 	<artifactId>ProductSearchService </artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>0.0.2</version>
 	<name>ProductSearchService </name>
 	<description>Demo project for Spring Boot</description>
 	<properties>
@@ -106,7 +106,7 @@
 					</execution>
 				</executions>
 				<configuration>
-					<repository>jappa22/cproduct-search-service</repository>
+					<repository>jappa22/product-search-service</repository>
 					<tag>${project.version}</tag>
 					<useMavenSettingsForAuth>true</useMavenSettingsForAuth>
 				</configuration>
