--- a/product-search-service/src/main/resources/application.properties
+++ b/product-search-service/src/main/resources/application.properties
@@ -6,8 +6,8 @@ spring.h2.console.enabled=true
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 
-eureka.instance.preferIpAddress=true
-eureka.instance.hostname=eureka-0
-eureka.client.registerWithEureka=true
-eureka.client.fetchRegistry=true
-eureka.client.serviceUrl.defaultZone=http://eureka-0.eureka.default.dvc.cluster.local:8761/eureka
+#eureka.instance.preferIpAddress=true
+#eureka.instance.hostname=eureka-0
+#eureka.client.registerWithEureka=true
+#eureka.client.fetchRegistry=true
+#eureka.client.serviceUrl.defaultZone=http://eureka-0.eureka.default.dvc.cluster.local:8761/eureka
