--- a/catalogue-service/src/main/resources/application.properties
+++ b/catalogue-service/src/main/resources/application.properties
@@ -4,11 +4,11 @@ spring.jpa.hibernate.ddl-auto=update
 #spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/testdb
 #spring.datasource.username=root
 #spring.datasource.password=pass@word1
-spring.datasource.password=${DB_USERNAME}
-spring.datasource.username=${DB_PASSWORD}
+spring.datasource.password=${DB_PASSWORD}
+spring.datasource.username=${DB_USERNAME}
 spring.datasource.url=jdbc:mysql://${DB_HOST}/${DB_NAME}?useSSL=false
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 #spring.jpa.show-sql: true
 logging.level.org.springframework.web: DEBUG
 
