--- a/catalogue-service.yml
+++ b/catalogue-service.yml
@@ -20,7 +20,7 @@ spec:
           imagePullPolicy: Always
           ports:
             - containerPort: 8081
-          env:
+          env:   # Setting Environmental Variables
             - name: DB_HOST   # Setting Database host address
               value: mysql
             - name: DB_NAME  # Setting Database name
