--- a/catalogue-service/pom.xml
+++ b/catalogue-service/pom.xml
@@ -9,19 +9,19 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.microservices.azure.assignment</groupId>
-	<artifactId>catalogue_service </artifactId>
+	<artifactId>catalogue_service</artifactId>
 	<version>0.0.2</version>
-	<name>catalogue_service </name>
+	<name>catalogue_service</name>
 	<description>Demo project for Spring Boot</description>
 	<properties>
 		<java.version>1.8</java.version>
 		<spring-cloud.version>2021.0.5</spring-cloud.version>
 	</properties>
 	<dependencies>
-		<dependency>
+		<!--<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
-		</dependency>
+		</dependency>-->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
