--- a/catalogue-service/src/main/resources/application.properties
+++ b/catalogue-service/src/main/resources/application.properties
@@ -9,7 +9,7 @@ spring.datasource.username=${DB_USERNAME}
 spring.datasource.url=jdbc:mysql://${DB_HOST}/${DB_NAME}?useSSL=false
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
-#spring.jpa.show-sql: true
+spring.jpa.show-sql: true
 logging.level.org.springframework.web: DEBUG
 
 #eureka.instance.preferIpAddress=true
