--- a/Inventory-service/src/main/resources/application.properties
+++ b/Inventory-service/src/main/resources/application.properties
@@ -1,6 +1,9 @@
 server.port:8082
 spring.application.name=INVENTORY-SERVICE
-
+spring.rabbitmq.host=20.235.78.165
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=user
+spring.rabbitmq.password=CzEya1vX5ZBD
 #eureka.instance.preferIpAddress=true
 #eureka.instance.hostname=eureka-0
 #eureka.client.registerWithEureka=true
