--- a/product-search-service/src/main/resources/application.properties
+++ b/product-search-service/src/main/resources/application.properties
@@ -5,7 +5,10 @@ spring.jpa.defer-datasource-initialization=true
 spring.h2.console.enabled=true
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
-
+spring.rabbitmq.host=20.235.78.165
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=user
+spring.rabbitmq.password=CzEya1vX5ZBD
 #eureka.instance.preferIpAddress=true
 #eureka.instance.hostname=eureka-0
 #eureka.client.registerWithEureka=true
