--- a/product-search-service/pom.xml
+++ b/product-search-service/pom.xml
@@ -10,18 +10,18 @@
 	</parent>
 	<groupId>com.azure.assignment.inventory</groupId>
 	<artifactId>ProductSearchService </artifactId>
-	<version>0.0.2</version>
-	<name>ProductSearchService </name>
-	<description>Demo project for Spring Boot</description>
+	<version>0.0.8</version>
+	<name>ProductSearchService</name>
+	<description>Product search service</description>
 	<properties>
 		<java.version>1.8</java.version>
 		<spring-cloud.version>2021.0.5</spring-cloud.version>
 	</properties>
 	<dependencies>
-		<dependency>
+		<!--<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
-		</dependency>
+		</dependency>-->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-amqp</artifactId>
