--- a/product-search-service/src/main/resources/bootstrap.properties
+++ b/product-search-service/src/main/resources/bootstrap.properties
@@ -1,2 +1,2 @@
-spring.cloud.config=true
-spring.cloud.uri=http://localhost:9296
+#spring.cloud.config=true
+#spring.cloud.uri=http://localhost:9296
