--- a/Inventory-service/pom.xml
+++ b/Inventory-service/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 	<groupId>com.azure.assignment.inventory</groupId>
 	<artifactId>InventoryService </artifactId>
-	<version>1.0.3</version>
+	<version>1.1.2</version>
 	<name>InventoryService </name>
 	<description>Inventory service</description>
 	<properties>
@@ -18,10 +18,20 @@
 		<spring-cloud.version>2021.0.5</spring-cloud.version>
 	</properties>
 	<dependencies>
-		<!--<dependency>
+		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
-		</dependency>-->
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.apache.commons/commons-lang3 -->
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
+			<version>3.0</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-validation</artifactId>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-amqp</artifactId>
