--- a/Inventory-service/src/main/resources/application.properties
+++ b/Inventory-service/src/main/resources/application.properties
@@ -4,8 +4,10 @@ spring.rabbitmq.host=20.235.78.165
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=user
 spring.rabbitmq.password=CzEya1vX5ZBD
-#eureka.instance.preferIpAddress=true
-#eureka.instance.hostname=eureka-0
-#eureka.client.registerWithEureka=true
-#eureka.client.fetchRegistry=true
-#eureka.client.serviceUrl.defaultZone=http://eureka-0.eureka.default.dvc.cluster.local:8761/eureka
+
+
+eureka.instance.preferIpAddress=true
+eureka.instance.hostname=eureka-0
+eureka.client.registerWithEureka=true
+eureka.client.fetchRegistry=true
+eureka.client.serviceUrl.defaultZone=http://eureka-0.eureka:8761/eureka
