--- a/catalogue-service/pom.xml
+++ b/catalogue-service/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 	<groupId>com.microservices.azure.assignment</groupId>
 	<artifactId>catalogue_service</artifactId>
-	<version>1.0.2</version>
+	<version>1.1.2</version>
 	<name>catalogue_service</name>
 	<description>Catalogue service</description>
 	<properties>
@@ -18,10 +18,16 @@
 		<spring-cloud.version>2021.0.5</spring-cloud.version>
 	</properties>
 	<dependencies>
-		<!--<dependency>
+		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
-		</dependency>-->
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.apache.commons/commons-lang3 -->
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
+			<version>3.0</version>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
