--- a/product-search-service/pom.xml
+++ b/product-search-service/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 	<groupId>com.azure.assignment.inventory</groupId>
 	<artifactId>ProductSearchService </artifactId>
-	<version>1.0.1</version>
+	<version>1.1.2</version>
 	<name>ProductSearchService</name>
 	<description>Product search service</description>
 	<properties>
@@ -18,10 +18,10 @@
 		<spring-cloud.version>2021.0.5</spring-cloud.version>
 	</properties>
 	<dependencies>
-		<!--<dependency>
+		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
-		</dependency>-->
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-amqp</artifactId>
@@ -34,7 +34,11 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
-
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
+			<version>3.0</version>
+		</dependency>
 		<dependency>
 			<groupId>com.h2database</groupId>
 			<artifactId>h2</artifactId>
